# learn-opengl

./: CMakeLists.txt  README.md  compile_commands.json
include/glad/: glad.h
src/: main.cpp
